# renamewheel

./: README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  deploy.yaml
src/renamewheel/: main.py
tests/: test_rename.py
tests/resources/: renamewheel-0.3.1-py3-none-any.whl  robotpy_hal-2025.3.2.3-cp313-cp313-linux_x86_64.whl  simple_manylinux_demo-4.0-cp312-cp312-manylinux_2_5_x86_64.whl
